tests/focus_check/focus_check.exp

Stop any already-running server.
Full check:
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (require('./b'): number);
       ^^^^^^^^^^^^^^

References:
   b.js:3:18
   3| module.exports = "";
                       ^^ [1]
   a.js:3:18
   3| (require('./b'): number);
                       ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   dir/test2.foo:4:5
   4| x = 3 + "string";
          ^^^^^^^^^^^^ [1]

References:
   dir/test2.foo:3:8
   3| var x: number = 3;
             ^^^^^^ [2]


Error ------------------------------------------------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_file.js:3:17
   3| var x: string = 123; // Error
                      ^^^ [1]

References:
   other_root/other_root_file.js:3:8
   3| var x: string = 123; // Error
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:3:2
   3| ("": number);
       ^^ [1]

References:
   test.js:3:6
   3| ("": number);
           ^^^^^^ [2]



Found 5 errors

Full focus-check:
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (require('./b'): number);
       ^^^^^^^^^^^^^^

References:
   b.js:3:18
   3| module.exports = "";
                       ^^ [1]
   a.js:3:18
   3| (require('./b'): number);
                       ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   dir/test2.foo:4:5
   4| x = 3 + "string";
          ^^^^^^^^^^^^ [1]

References:
   dir/test2.foo:3:8
   3| var x: number = 3;
             ^^^^^^ [2]


Error ------------------------------------------------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_file.js:3:17
   3| var x: string = 123; // Error
                      ^^^ [1]

References:
   other_root/other_root_file.js:3:8
   3| var x: string = 123; // Error
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:3:2
   3| ("": number);
       ^^ [1]

References:
   test.js:3:6
   3| ("": number);
           ^^^^^^ [2]



Found 5 errors

Focused check on a file with local errors but no dependency or reverse dependency:
Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:3:2
   3| ("": number);
       ^^ [1]

References:
   test.js:3:6
   3| ("": number);
           ^^^^^^ [2]



Found 2 errors

Focused check on a file with no local errors but a dependency:
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (require('./b'): number);
       ^^^^^^^^^^^^^^

References:
   b.js:3:18
   3| module.exports = "";
                       ^^ [1]
   a.js:3:18
   3| (require('./b'): number);
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      



Found 2 errors

Focused check on a file with no local errors but a reverse dependency:
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (require('./b'): number);
       ^^^^^^^^^^^^^^

References:
   b.js:3:18
   3| module.exports = "";
                       ^^ [1]
   a.js:3:18
   3| (require('./b'): number);
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      



Found 2 errors

Focused check on two files with overlapping errors:
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (require('./b'): number);
       ^^^^^^^^^^^^^^

References:
   b.js:3:18
   3| module.exports = "";
                       ^^ [1]
   a.js:3:18
   3| (require('./b'): number);
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      



Found 2 errors

Focused check on multiple files with disjoint sets of errors:
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (require('./b'): number);
       ^^^^^^^^^^^^^^

References:
   b.js:3:18
   3| module.exports = "";
                       ^^ [1]
   a.js:3:18
   3| (require('./b'): number);
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:3:2
   3| ("": number);
       ^^ [1]

References:
   test.js:3:6
   3| ("": number);
           ^^^^^^ [2]



Found 3 errors

Focused check on a file and a directory:
Error ------------------------------------------------------------------------------------------------ dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   dir/test2.foo:4:5
   4| x = 3 + "string";
          ^^^^^^^^^^^^ [1]

References:
   dir/test2.foo:3:8
   3| var x: number = 3;
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      


Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast empty string to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:3:2
   3| ("": number);
       ^^ [1]

References:
   test.js:3:6
   3| ("": number);
           ^^^^^^ [2]



Found 3 errors

Focused check on files specified in list.txt:
Error --------------------------------------------------------------------------------------------------------- a.js:3:2

Cannot cast `require(...)` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   a.js:3:2
   3| (require('./b'): number);
       ^^^^^^^^^^^^^^

References:
   b.js:3:18
   3| module.exports = "";
                       ^^ [1]
   a.js:3:18
   3| (require('./b'): number);
                       ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ dir/test2.foo:4:5

Cannot assign `3 + "string"` to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   dir/test2.foo:4:5
   4| x = 3 + "string";
          ^^^^^^^^^^^^ [1]

References:
   dir/test2.foo:3:8
   3| var x: number = 3;
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      



Found 3 errors

Focused check guessing root by looking at first file:
Error --------------------------------------------------------------------------- other_root/other_root_dependent.js:5:2

Cannot cast `foo` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   other_root/other_root_dependent.js:5:2
   5| (foo: string); // Error
       ^^^

References:
   other_root/other_root_file.js:5:16
   5| export default 123;
                     ^^^ [1]
   other_root/other_root_dependent.js:5:7
   5| (foo: string); // Error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_file.js:3:17
   3| var x: string = 123; // Error
                      ^^^ [1]

References:
   other_root/other_root_file.js:3:8
   3| var x: string = 123; // Error
             ^^^^^^ [2]



Found 2 errors

Focused check with explicit root:
Error ------------------------------------------------------------------------------- other_root/other_root_file.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   other_root/other_root_file.js:3:17
   3| var x: string = 123; // Error
                      ^^^ [1]

References:
   other_root/other_root_file.js:3:8
   3| var x: string = 123; // Error
             ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      



Found 2 errors

Focused check with syntax error:
Error ---------------------------------------------------------------------------------------------------- syntax.js:4:1

Unexpected end of input

   4|
      



Found 1 error

Done!
